# osrs-economy

./: .gitignore  Dockerfile  README.md  details.json  details.py  docker-compose.yml  main.py  prices.py  pyproject.toml  readme.md
airflow/config/: airflow.cfg.example
airflow/dags/: details_pipeline.py  prices_pipeline.py
cfg/: config.json  config.json.example  secrets.json.example
data/: details.json
dbt/: dbt_project.yml
dbt/models/: prices_all_time.sql  prices_daily.sql  prices_latest.sql  prices_overview.sql  prices_weekly.sql  schema.yml  sources.yml
docs/: schema.erd
src/: cloud.py  config.py  details.py  prices.py  utilities.py
src/cloud/bigquery/: handler.py  helper.py
src/cloud/storage/: handler.py  helper.py
src/structures/: enums.py
terraform/: main.tf  variables.tf
terraform/schemas/: bronze_prices.json  items.json  prices.json
